--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-slate
 title: SkyEmu
 description: GameBoy Advance, Game Boy and Game Boy Color Emulator
 show_downloads: false
+github:
+  repository_url: https://github.com/skylersaleh/SkyEmu
